# secure-send-cli

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  README.md  build-linux.sh  install.ps1  install.sh
.github/workflows/: release.yml
crates/beam-common/: Cargo.toml
crates/beam-common/src/: lib.rs
crates/beam-common/src/auth/: nostr_pin.rs  pin.rs  spake2.rs
crates/beam-common/src/core/: beam.rs  folder.rs  transfer.rs
crates/beam-common/src/signaling/: nostr_protocol.rs
crates/beam-rs/: Cargo.toml
crates/beam-rs-local/: Cargo.toml
crates/beam-rs-local/src/: main.rs
crates/beam-rs-local/src/mdns/: common.rs  receiver.rs  sender.rs
crates/beam-rs-tor/: Cargo.toml
crates/beam-rs-tor/src/: main.rs
crates/beam-rs-tor/src/onion/: receiver.rs  sender.rs
crates/beam-rs-webrtc/: .gitignore  Cargo.toml
crates/beam-rs-webrtc/src/: main.rs
crates/beam-rs/src/: main.rs
crates/wormhole-rs/: Cargo.toml
docs/: ARCHITECTURE.md  ROADMAP.md  USE_CASES.md
src/: archive.rs  lib.rs  main.rs  transfer.rs  util.rs
src/core/: beam.rs  folder.rs  mod.rs  resume.rs  transfer.rs  xfer.rs
src/crypto/: aes.rs  chunk.rs  ecdh.rs  mod.rs  pin.rs
src/signaling/: crypto.rs  manual.rs  mod.rs  nostr.rs  nostr_protocol.rs  offline.rs
src/tui/: app.rs  dir_picker.rs  file_browser.rs  mod.rs  transfer_screen.rs  widgets.rs
src/ui/: mod.rs
src/webrtc/: common.rs  manual_receiver.rs  manual_sender.rs  mod.rs  nostr_receiver.rs  nostr_sender.rs  offline_receiver.rs  offline_sender.rs  receiver.rs  sender.rs
tests/: cli_to_cli_transfer.rs  transfer_test.rs
(+13 files in other folders)
