[package]
name = "beam-rs-local"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "beam-rs-local"
path = "src/main.rs"

[dependencies]
# Common library
beam-common = { path = "../beam-common" }

# Core dependencies (workspace)
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# Crate-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mdns-sd = "0.18"
